# http-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
required/: mime.types
src/: headers.h  main.cpp  server.cpp  structs.h
src/controller/: controller.cpp  controller.h
src/dkim/: dkim.cpp  dkim.h
src/functions/: functions.cpp  functions.h
src/hashids/: hashids.cpp  hashids.h
src/json/: json.cpp  json.h
src/mail/: mail.cpp  mail.h
src/model/: model.cpp  model.h
src/pages/test/: controller.cpp  controller.h
src/polling/: polling.cpp  polling.h
src/view/: view.cpp  view.h
